2001-03-26  Darin Adler  <darin@eazel.com>

	* omf-install/.cvsignore: Quick fix to ignore .omf files.

2001-03-25  Dan Mueth  <dan@eazel.com>

	Updated index page for gnome-help-browser to point to current
	GNOME User's Guide.

	* help-browser/help/C/default-page.html:
	* help-browser/help/ca/default-page.html:
	* help-browser/help/da/default-page.html:
	* help-browser/help/de/default-page.html:
	* help-browser/help/el/default-page.html:
	* help-browser/help/es/default-page.html:
	* help-browser/help/et/default-page.html:
	* help-browser/help/fr/default-page.html:
	* help-browser/help/gl/default-page.html:
	* help-browser/help/hu/default-page.html:
	* help-browser/help/it/default-page.html:
	* help-browser/help/ja/default-page.html:
	* help-browser/help/ko/default-page.html:
	* help-browser/help/lt/default-page.html:
	* help-browser/help/no/default-page.html:
	* help-browser/help/uk/default-page.html:
	* help-browser/help/wa/default-page.html:

2001-03-25  Jens Finke <jens@gnome.org>
	
	* gnome.spec.in: Include gnome-terminal datadir stuff. Make use
	of rpm macros.

2001-03-23  Yukihiro Nakai  <nakai@gnome.gr.jp>

	* configure.in: Generate Makefile of Japanese gsm help.

2001-03-23  Dan Mueth  <dan@eazel.com>

	Fixed error in metadata, placing it in the wrong locale.

	* panel/help/ja/panel-ja.omf:

2001-03-22  Dan Mueth  <dan@eazel.com>

	A couple bug fixes from the previous huge commit.

	* applets/desk-guide/help/C/Makefile.am:
	* applets/desk-guide/help/de/Makefile.am:

2001-03-22  Dan Mueth  <dan@eazel.com>

	Updating doc build stuff to use sgmldocs.make.  Making sure
	screenshots are in figures directory.  A few other small
	doc fixes.

	* applets/desk-guide/help/C/Makefile.am:
	* applets/desk-guide/help/C/desk-guide.sgml:
	* applets/desk-guide/help/C/deskguide-fig.png:
	* applets/desk-guide/help/C/deskguide-properties-advanced-fig.png:
	* applets/desk-guide/help/C/deskguide-properties-geometry-fig.png: