@@ -1,3 +1,9 @@
+2001-03-28  Dan Mueth  <dan@eazel.com>
+
+	Linking GNOME hint capplet to doc
+
+	* gnome-hint/gnome-hint-properties.c: (help):
+
 2001-03-26  Darin Adler  <darin@eazel.com>
 
 	* omf-install/.cvsignore: Quick fix to ignore .omf files.
